--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.15",
+    "mongoose-float": "^1.0.4",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0"
   },
