--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "mongoose": "^5.11.15",
     "mongoose-float": "^1.0.4",
     "multer": "^1.4.2",
-    "multer-s3": "^2.9.0"
+    "multer-s3": "^2.9.0",
+    "nodemailer": "^6.5.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
