--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.15",
     "mongoose-float": "^1.0.4",
+    "mongoose-paginate-v2": "^1.3.18",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
     "nodemailer": "^6.5.0"
